# facedetection

./: .gitignore  CMakeLists.txt  README.md  facedetect.cpp  facedetect.py
cpp/: facedetect.cpp
python/: facedetect.py  facedetect_video.py
